Move project to C drive and update to java16